<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Rwanda</string>
    <string name="welcome_rwanda">Welcome to Rwanda</string>
    <string name="action_settings">Settings</string>
    <string name="lbl_username">Username</string>
    <string name="hint_username">Enter Username</string>
    <string name="lbl_password">Password</string>
    <string name="hint_password">Enter Password</string>
    <string name="btn_login">Login</string>
    <string name="title_activity_rwandalist">rwandalist</string>
    <string name="hello_world">Hello world!</string>

</resources>
