<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".Login">

    <TextView
        android:id="@+id/welcome_message"
        android:text="@string/welcome_rwanda"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:background="#00ff00"
        android:padding="16dp"

        />

    <LinearLayout
        android:id="@+id/block_username"
        android:layout_width="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp"
        android:layout_below="@+id/welcome_message"
        android:layout_height="wrap_content">

     <TextView
         android:id="@+id/lbl_username"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="20dp"
         android:text="@string/lbl_username"/>

     <EditText
         android:id="@+id/field_username"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="20dp"
         android:text="@string/hint_username"
         />

        </LinearLayout>

    <LinearLayout
        android:id="@+id/block_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/block_username"
        android:padding="16dp"
        >

        <TextView
            android:id="@+id/lbl_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_password"
            android:textSize="20dp"
            />
        <EditText
            android:id="@+id/field_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:text="@string/hint_password"
            />

        </LinearLayout>


    <Button
        android:id="@+id/btnLogin"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/block_password"
        android:textSize="20sp"
        android:background="#07c"
        android:textColor="#fff"
        android:text="@string/btn_login"
        />

</RelativeLayout>
